--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ document.getElementById('namaForm').addEventListener('submit', function(e) {
   if (!regex.test(inputNama)) {
     alert("NAMA TIDAK VALID\nMungkin Nama Anda Mengandung Kata Terlarang");
   } else {
-    let website = "https://api.whatsapp.com/send?phone=+6288214764360&text=" + inputNama + "";
+    let website = "https://api.whatsapp.com/send?phone=+62 895-1204-4598&text=" + inputNama + "";
     window.location.href = website;
   }
 });
