--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ document.getElementById('namaForm').addEventListener('submit', function(e) {
   if (!regex.test(inputNama)) {
     alert("NAMA TIDAK VALID\nMungkin Nama Anda Mengandung Kata Terlarang");
   } else {
-    let website = "https://api.whatsapp.com/send?phone=+62 838-2541-2487&text=" + inputNama + "";
+    let website = "https://wa.me/6285755251934?text=.reqwl" + inputNama + "";
     window.location.href = website;
   }
 });
