--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ document.getElementById('namaForm').addEventListener('submit', function(e) {
   if (!regex.test(inputNama)) {
     alert("NAMA TIDAK VALID\nMungkin Nama Anda Mengandung Kata Terlarang");
   } else {
-    let website = "https://wa.me/6285755251934?text=.reqwl " + inputNama + "";
+    let website = "https://wa.me/8288214764360?text=+wl " + inputNama + "";
     window.location.href = website;
   }
 });
